k8s/infrastructure/network/adguard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
  namespace: dns
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - 'adguard.kube.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adguard
          port: 3000
